1、修改刷新功能2、修改专题

--- a/cocowx/pages/goodsDetail/goodsDetail.styl
+++ b/cocowx/pages/goodsDetail/goodsDetail.styl
@@ -55,10 +55,11 @@ page
   .gd-title 
     margin-top: 30rpx
     padding-bottom: 24rpx
-    line-height: $detTitleLineHei
-    font-weight: bold
     border-bottom: 1rpx solid $gray
-    textOverflowEs(2)
+    text
+      line-height: $detTitleLineHei
+      font-weight: bold
+      textOverflowEs(2)
 
   .gd-price 
     // padding-bottom: 50rpx
