--- a/cocowx/pages/index/index.styl
+++ b/cocowx/pages/index/index.styl
@@ -225,3 +225,15 @@ page
   color: $white
   background-color: $defaultColor
   animation: fadeIn 1s
+// 种草背景颜色
+.stateOne
+  background-color: rgb(0, 223, 182)
+// 攻略背景颜色
+.stateTwo
+  background-color: rgb(57, 172, 254)
+// 推荐背景颜色
+.stateThree
+  background-color: rgb(255, 105, 105)
+// 活动背景颜色
+.stateFour
+  background-color: rgb(255, 172, 0)
