--- a/cocowx/pages/activityDetail/activityDetail.wxml
+++ b/cocowx/pages/activityDetail/activityDetail.wxml
@@ -4,7 +4,7 @@
   <block wx:if="{{!isEmptyList}}">
     <view class="adm-banner"><image bindtap="previewImg" data-src="{{marketingDetail.marketingDetailsImg + imgQuery}}" src="{{marketingDetail.marketingDetailsImg + imgQuery}}"></image></view>
     <view class="adm-title" wx:if="{{marketingDetail.marketingName}}"><text>{{marketingDetail.marketingName}}</text></view>
-    <view class="adm-desc">
+    <view class="adm-desc {{clearMb === 'true' ? 'clearMb' : ''}}">
       <template is="wxParse" data="{{wxParseData: article.nodes}}"/> <!-- 商品详情desc -->
     </view>
   </block>
