1.添加首页商品列表数据重复过滤代码，方便检测商品+专题是否重复；2.新增专题-活动页面渲染；

--- a/cocowx/pages/activityDetail/activityDetail.styl
+++ b/cocowx/pages/activityDetail/activityDetail.styl
@@ -23,6 +23,7 @@ page
     textOverflowEs(2)
     background-color: $white
   .adm-desc 
+    overflow: hidden
     box-sizing: border-box
     padding: 0 $paddingPage
     background-color: $white
